[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "cmark-editor"
version = "0.1.0"

[dependencies]
gdk = "0.6"
horrorshow = "0.6.2"
pango = "0.2.0"
pulldown-cmark = "0.1.0"
sourceview = "0.2"
tiny-keccak = "1.4.0"
webkit2gtk = "0.2"

[dependencies.gtk]
features = ["v3_22"]
version = "0.2"
